# auth-service

./: .env  .gitignore  Makefile  README.md  docker-compose-auth-service.yaml  docker-compose.yaml
auth_service_app/: Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
auth_service_app/api/: __init__.py  constants.py
auth_service_app/api/bootstrap/: __init__.py  app_factory.py  app_initializer.py  cors_registrar.py  instrumentation_setup.py  router_registrar.py
auth_service_app/api/config/: __init__.py  config.py
auth_service_app/api/controllers/: __init__.py  auth_controller.py  health_controller.py
auth_service_app/api/dependencies/: __init__.py  config_dependency.py  db_dependency.py
auth_service_app/api/dtos/: __init__.py
auth_service_app/api/dtos/auth_dto/: __init__.py  login_user_request_dto.py  login_user_response_dto.py  register_user_request_dto.py  register_user_response_dto.py
auth_service_app/api/dtos/login_dto/: login_user_request_dto.py
auth_service_app/api/dtos/register_dto/: register_user_request_dto.py  register_user_response_dto.py
auth_service_app/api/dtos/validate_token_dto/: __init__.py  validate_token_request_dto.py  validate_token_response_dto.py
auth_service_app/api/exceptions/: __init__.py  base_exception.py  db_exception.py  exception_handlers.py  token_exception.py  user_exception.py
auth_service_app/api/models/: __init__.py  base.py  user.py
auth_service_app/api/repositories/: __init__.py  db.py
auth_service_app/api/repositories/auth_repository/: __init__.py  auth_repository.py  auth_repository_impl.py
auth_service_app/api/services/: __init__.py
auth_service_app/api/services/auth_service/: __init__.py  auth_service.py  auth_service_impl.py
auth_service_app/api/utils/: __init__.py  auth_service_logger.py  email_validator.py  jwt_utils.py  security.py
auth_service_app/docs/: README.md
auth_service_app/smoke_tests/: Dockerfile  README.md  pyproject.toml
auth_service_app/smoke_tests/tests/: test_health.py  test_login.py  test_register.py  test_validate_token.py
auth_service_app/tests/api/controllers/: test_auth_controller.py  test_health_controller.py  test_validate_token_controller.py
auth_service_app/tests/api/dependencies/: test_config_dependency.py  test_db_dependency.py
auth_service_app/tests/api/dtos/: __init__.py  test_imports.py
auth_service_app/tests/api/dtos/auth_dto/: __init__.py  test_login_user_request_dto.py  test_login_user_response_dto.py  test_register_user_request_dto.py  test_register_user_response_dto.py
auth_service_app/tests/api/exceptions/: test_base_exception.py  test_db_exception.py  test_user_exception.py  test_user_exceptions.py
auth_service_app/tests/api/models/: test_base.py  test_user.py
auth_service_app/tests/api/repositories/: test_db.py
auth_service_app/tests/api/repositories/auth_repository/: test_auth_repository.py  test_auth_repository_impl.py
auth_service_app/tests/api/services/auth_service/: test_auth_service.py  test_auth_service_impl.py
auth_service_app/utils/: __init__.py  auth_service_logger.py  auth_token.py  jwt_utils.py  password_utils.py
components/auth_service_app/: Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
components/auth_service_app/smoke_tests/: pyproject.toml  run.sh
components/auth_service_app/smoke_tests/tests/: conftest.py  test_add_role.py  test_check_session_status.py  test_get_me.py  test_health.py  test_login.py  test_logout.py  test_register.py  test_validate_token.py
components/auth_service_app/src/api/: __init__.py
components/auth_service_app/src/api/bootstrap/: __init__.py  app_factory.py  app_initializer.py  cors_registrar.py  instrumentation_setup.py  router_registrar.py
components/auth_service_app/src/api/config/: __init__.py  app_config.py  config.py  cookie_config.py  cors_config.py  db_pool_config.py  jwt_config.py  mysql_config.py  observability_config.py  (+1 more)
components/auth_service_app/src/utils/: __init__.py  auth_service_logger.py  email_validator.py  jwt_utils.py  key_manager.py  security.py  token_claims.py
components/auth_service_app/tests/: conftest.py
(+174 files in other folders)
