[tool.poetry]

name = "Auth Service API"
version = "0.1.0"
description = "Auth Service API"
authors = ["Dilip Sharma"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"  # Python runtime version
pydantic-settings = "^2.7.1"  # Settings management using Pydantic
instrumentation-hub-fastapi = { git = "https://github.com/vyavasthita/instrumentation-hub.git", rev = "main", subdirectory = "packages/python/fastapi" }
sqlalchemy = "^2.0.45"
aiomysql = "^0.3.2"
greenlet = "^3.0"
email-validator = "^2.2.0"
bcrypt = "^5.0.0"
pyjwt = "^2.10.1"

[tool.poetry.group.core.dependencies]
fastapi = "^0.115.8"  # FastAPI web framework
uvicorn = "^0.34.0"  # ASGI server for FastAPI


[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
coverage = "^7.13.1"
anyio = "^4.12.1"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (needed for Depends())
    "N802",   # function name should be lowercase (Config() is intentional)
    "N818",   # exception name should end with Error (BaseException is intentional)
    "TCH001", # move import into type-checking block (breaks FastAPI runtime)
    "TC001",  # move import into type-checking block (breaks FastAPI runtime)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports in barrel files

[tool.ruff.format]
quote-style = "double"
indent-style = "space"