[tool.poetry]
name = "smoke-tests"
version = "0.1.0"
description = "Smoke tests for auth service"
authors = ["Dilip Sharma <diliplakshya@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
pytest = "^9.0.2"
httpx = "^0.28.1"
pytest-asyncio = "^1.3.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
